2012-03-19  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        jhbuild: Call jhbuild's autogen.sh via bash.
        https://bugs.webkit.org/show_bug.cgi?id=81485

        Reviewed by Philippe Normand.

        jhbuild's autogen.sh uses "/bin/bash" in the shebang line, however
        this is usually true only on Linux systems, and even then bash for
        some reason might not be available in that location. It is safer to
        call bash directly and pass autogen.sh to it instead.

        * jhbuild/jhbuild-wrapper:
        (install_jhbuild):

2012-03-19  Philippe Normand  <pnormand@igalia.com>

        [GTK] Prefix run-launcher with run-with-jhbuild
        https://bugs.webkit.org/show_bug.cgi?id=81503

        Reviewed by Hajime Morita.

        * Scripts/run-launcher:

2012-03-19  Dominik Röttsches  <dominik.rottsches@linux.intel.com>

        [EFL] Prefix run-launcher with run-with-jhbuild
        https://bugs.webkit.org/show_bug.cgi?id=80026

        Reviewed by Hajime Morita.

        * Scripts/run-launcher:

2012-03-18  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed. Disable -Werror on x86 until proper fix.
        https://bugs.webkit.org/show_bug.cgi?id=81498

        * qmake/mkspecs/features/unix/default_post.prf:

2012-03-17  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        Unreviewed; switch to using my FreeBSD.org email address, the
        other one is going to disappear soon.

        * Scripts/webkitpy/common/config/committers.py:
        * Scripts/webkitpy/common/config/watchlist:

2012-03-17  Raphael Kubo da Costa  <kubo@profusion.mobi>

        Unreviewed; fix webkitpy unit test failures after r111116.

        It turns out that cmd_line in the patch in bug 80025 had the right
        signature when it was submitted, but r109242 added a few more
        required parameters, and since the method (and EflDriver) did not
        exist at the time we ended up committing a broken method.
