@@ -1,3 +1,15 @@
+2012-03-19  Alexander Færøy  <alexander.faeroy@nokia.com>
+
+        [Qt] Remove dead user agent code from the MiniBrowser.
+
+        Reviewed by Simon Hausmann.
+
+        * MiniBrowser/qt/BrowserWindow.cpp:
+        * MiniBrowser/qt/BrowserWindow.h:
+        (BrowserWindow):
+        * MiniBrowser/qt/MiniBrowser.qrc:
+        * MiniBrowser/qt/useragentlist.txt: Removed.
+
 2012-03-19  Raphael Kubo da Costa  <rakuco@FreeBSD.org>
 
         jhbuild: Call jhbuild's autogen.sh via bash.
